2020-08-13  Zalan Bujtas  <zalan@apple.com>

        Add RenderTreeMutationDisallowedScope to track intrusive render tree mutations
        https://bugs.webkit.org/show_bug.cgi?id=215463
        <rdar://problem/67012831>

        Reviewed by Simon Fraser.

        RenderLayer::enclosingScrollableLayer should not mutate the render tree accidentally.
        This is related to <rdar://problem/64739768>.

        * Sources.txt:
        * WebCore.xcodeproj/project.pbxproj:
        * rendering/RenderTreeMutationDisallowedScope.cpp: Added.
        * rendering/RenderTreeMutationDisallowedScope.h: Added.
        (WebCore::RenderTreeMutationDisallowedScope::RenderTreeMutationDisallowedScope):
        (WebCore::RenderTreeMutationDisallowedScope::~RenderTreeMutationDisallowedScope):
        (WebCore::RenderTreeMutationDisallowedScope::isMutationAllowed):
        * rendering/updating/RenderTreeBuilder.cpp:
        (WebCore::RenderTreeBuilder::destroy):

2020-08-13  Chris Dumez  <cdumez@apple.com>

        REGRESSION (r260684): Messages YouTube inline video: after Multitasking away and Back, Audio is heard but icon indicates "muted"
        https://bugs.webkit.org/show_bug.cgi?id=215453
        <rdar://problem/66136673>

        Reviewed by Tim Horton.

        r260684 silenced all JS events during the snapshot sequence that occurs whenever the user homes out of Safari.
        This was meant to address compatibility with websites that did not expect various resize/orientationchange
        events when homing out. However, the snapshot sequence is fairly long and this was causing us to silence JS
        events which have nothing to do with the snapshot sequence, like window.postMessage()'s message events. This is
        what caused this regression.

        To address the issue, this patch basically reverts r260684 and deals with websites-compatibility issues via
        less risky site-specific and event-specific quirks: